--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     background-position: bottom right;
 }
 
+.title:hover {
+    color: rgb(0, 129, 39);
+    transition: 0.4s ease-out;
+}
+
 .list li {
     list-style-type: none;
 }
@@ -21,6 +26,13 @@ img {
     display: block;
     float: left;
     margin-right: 30px;
+    transition:0.5s ease-in-out;
+ }
+
+img:hover {
+    filter: grayscale(100%);
+    transition: 0.5s ease-in-out;
+    width: 650px;
 }
 
 .story {
@@ -117,4 +129,8 @@ header em {
 
 p:first-of-type {
     font-weight: bold;
+}
+
+table {
+    width: 600px;
 }
